// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/Header when rendered with a proper path it should match snapshot (it should have path links for all but last part of path) 1`] = `
<div
  style={
    Object {
      "background": "white",
      "borderRadius": 3,
      "display": "flex",
      "flexDirection": "column",
      "marginRight": 10,
      "padding": 10,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "maxWidth": 1100,
      }
    }
  >
    <div
      style={
        Object {
          "color": "#333333",
          "display": "inline-block",
          "fontSize": 28,
          "fontWeight": "bold",
          "marginBottom": 10,
          "marginRight": 20,
        }
      }
    >
      Git Temporal 
    </div>
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "flexGrow": 1,
          "marginBottom": 10,
          "marginRight": 10,
        }
      }
    >
      <div>
        <SearchInput
          onChange={[Function]}
          onClear={[Function]}
          placeholder="search authors, files or commits"
          style={
            Object {
              "borderRadius": 10,
              "float": "right",
              "marginLeft": 10,
              "marginTop": 0,
              "width": 250,
            }
          }
        />
        <div
          style={
            Object {
              "color": "#333333",
              "fontSize": 18,
              "fontWeight": "bold",
              "marginBottom": 10,
              "marginRight": 20,
            }
          }
        >
          Stats for 
          <span
            style={
              Object {
                "wordBreak": "break-all",
              }
            }
          >
            <span
              key="0"
              onClick={[Function]}
              style={
                Object {
                  "color": "blue",
                  "cursor": "pointer",
                  "margin": "0px 2px",
                  "textDecoration": "underline",
                }
              }
            >
              repository:/
            </span>
          </span>
          <span
            style={
              Object {
                "wordBreak": "break-all",
              }
            }
          >
            /
            <span
              key="1"
              onClick={[Function]}
              style={
                Object {
                  "color": "blue",
                  "cursor": "pointer",
                  "margin": "0px 2px",
                  "textDecoration": "underline",
                }
              }
            >
              some
            </span>
          </span>
          <span
            style={
              Object {
                "wordBreak": "break-all",
              }
            }
          >
            /
            <span
              key="2"
              onClick={[Function]}
              style={
                Object {
                  "color": "blue",
                  "cursor": "pointer",
                  "margin": "0px 2px",
                  "textDecoration": "underline",
                }
              }
            >
              path
            </span>
          </span>
          <span
            style={
              Object {
                "wordBreak": "break-all",
              }
            }
          >
            /
            <span
              key="3"
              onClick={[Function]}
              style={
                Object {
                  "color": "blue",
                  "cursor": "pointer",
                  "margin": "0px 2px",
                  "textDecoration": "underline",
                }
              }
            >
              to
            </span>
          </span>
          <span
            style={
              Object {
                "wordBreak": "break-all",
              }
            }
          >
            /
            <span
              key="4"
              style={
                Object {
                  "margin": "0px 2px",
                }
              }
            >
              File.txt
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "color": "#333333",
        "fontSize": 14,
        "fontWeight": "normal",
        "marginBottom": 10,
        "marginRight": 10,
      }
    }
  >
    From
     
    <EpochDateTime
      displayOptions={
        Object {
          "month": "long",
          "timeZoneName": "short",
        }
      }
      style={
        Object {
          "color": "lightskyblue",
          "fontSize": 18,
          "fontWeight": "bold",
          "margin": "0px 5px",
          "marginBottom": 20,
          "marginRight": 20,
        }
      }
    />
     
    to
     
    <EpochDateTime
      displayOptions={
        Object {
          "month": "long",
          "timeZoneName": "short",
        }
      }
      style={
        Object {
          "color": "lightskyblue",
          "fontSize": 18,
          "fontWeight": "bold",
          "margin": "0px 5px",
          "marginBottom": 20,
          "marginRight": 20,
        }
      }
    />
    <span>
        
      (
      <span
        onClick={[Function]}
        style={
          Object {
            "color": "blue",
            "cursor": "pointer",
            "textDecoration": "underline",
          }
        }
      >
        reset
      </span>
      )
    </span>
  </div>
</div>
`;

exports[`containers/Header when rendered without props it should match snapshot (it should be showing App Name and repository:/) 1`] = `
<div
  style={
    Object {
      "background": "white",
      "borderRadius": 3,
      "display": "flex",
      "flexDirection": "column",
      "marginRight": 10,
      "padding": 10,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "maxWidth": 1100,
      }
    }
  >
    <div
      style={
        Object {
          "color": "#333333",
          "display": "inline-block",
          "fontSize": 28,
          "fontWeight": "bold",
          "marginBottom": 10,
          "marginRight": 20,
        }
      }
    >
      Git Temporal 
    </div>
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "flexGrow": 1,
          "marginBottom": 10,
          "marginRight": 10,
        }
      }
    >
      <div>
        <SearchInput
          onChange={[Function]}
          onClear={[Function]}
          placeholder="search authors, files or commits"
          style={
            Object {
              "borderRadius": 10,
              "float": "right",
              "marginLeft": 10,
              "marginTop": 0,
              "width": 250,
            }
          }
        />
        <div
          style={
            Object {
              "color": "#333333",
              "fontSize": 18,
              "fontWeight": "bold",
              "marginBottom": 10,
              "marginRight": 20,
            }
          }
        >
          Stats for 
          <span
            style={
              Object {
                "wordBreak": "break-all",
              }
            }
          >
            <span
              key="0"
              style={
                Object {
                  "margin": "0px 2px",
                }
              }
            >
              repository:/
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "color": "#333333",
        "fontSize": 14,
        "fontWeight": "normal",
        "marginBottom": 10,
        "marginRight": 10,
      }
    }
  >
    From
     
    <EpochDateTime
      displayOptions={
        Object {
          "month": "long",
          "timeZoneName": "short",
        }
      }
      style={
        Object {
          "color": "lightskyblue",
          "fontSize": 18,
          "fontWeight": "bold",
          "margin": "0px 5px",
          "marginBottom": 20,
          "marginRight": 20,
        }
      }
    />
     
    to
     
    <EpochDateTime
      displayOptions={
        Object {
          "month": "long",
          "timeZoneName": "short",
        }
      }
      style={
        Object {
          "color": "lightskyblue",
          "fontSize": 18,
          "fontWeight": "bold",
          "margin": "0px 5px",
          "marginBottom": 20,
          "marginRight": 20,
        }
      }
    />
    <span>
        
      (
      <span
        onClick={[Function]}
        style={
          Object {
            "color": "blue",
            "cursor": "pointer",
            "textDecoration": "underline",
          }
        }
      >
        reset
      </span>
      )
    </span>
  </div>
</div>
`;
